After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751295 - backend-gst: Plug memory leak in audio info
backend-gst: Plug memory leak in audio info
Status: RESOLVED FIXED
Product: gupnp-dlna
Classification: Other
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-21 19:32 UTC by Jens Georg
Modified: 2019-02-22 06:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backend-gst: Plug memory leak in audio info (1.16 KB, patch)
2015-06-21 19:32 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2015-06-21 19:32:06 UTC
We forgot to free the audio stream list used for the ADTS "hack"
Comment 1 Jens Georg 2015-06-21 19:32:10 UTC
Created attachment 305781 [details] [review]
backend-gst: Plug memory leak in audio info

Signed-off-by: Jens Georg <mail@jensge.org>
Comment 2 Jens Georg 2015-06-21 19:38:43 UTC
Attachment 305781 [details] pushed as 7f8835d - backend-gst: Plug memory leak in audio info